// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package stock;
import "common/common.proto";

option java_multiple_files = true;
option java_package = "dev.tanpn.grpc.proto";
option java_outer_classname = "StockTradingSvc";
option objc_class_prefix = "";


service StockTrading {
  // A Unary RPC.
  rpc enterOrder (EnterOrderRequest) returns (EnterOrderReply) {}

  // A client-to-server streaming RPC.
  rpc cancelOrders (stream CancelOrderRequest) returns (CancelOrderReply) {}

  // A server-to-client streaming RPC.
  rpc orderEnquiry (OrderEnquiryRequest) returns (stream OrderDetail) {}
}

message EnterOrderRequest {
  string clientID = 1;
  string stockID = 2;
  string marketID = 3;
  int32 quantity = 4;
  double price = 5;
}

message EnterOrderReply {
  bool success = 1;
  string message = 2;
  OrderDetail orderDetail = 3;
}

message CancelOrderRequest {
  OrderDetail orderDetail = 1;
}

message CancelOrderReplyDetail {
  OrderDetail orderDetail = 1;
  bool success = 2;
  string message = 3;
}

message CancelOrderReply {
  repeated CancelOrderReplyDetail responses = 1;
}

message OrderEnquiryRequest {
  string clientID = 1;
  string stockID = 2;
  string marketID = 3;
}